Bug 369481 - Cannot undo changes to a systemwide color scheme
Summary: Cannot undo changes to a systemwide color scheme
Status: RESOLVED FIXED
Alias: None
Product: konsole
Classification: Applications
Component: general (other bugs)
Version First Reported In: 16.08.1
Platform: Fedora RPMs Linux
: NOR normal
Target Milestone: ---
Assignee: Konsole Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-09-28 14:54 UTC by Jonathan Wakely
Modified: 2018-01-23 14:37 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 18.04
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Jonathan Wakely 2016-09-28 14:54:22 UTC
If you edit a systemwide color scheme (i.e. one defined in /usr/share/konsole) and then decide to throw away your edits, there is no easy way to go back to the systemwide color scheme.


Reproducible: Always

Steps to Reproduce:
1. Settings -> Edit current profile... -> Apearance
2. "Edit" one of the systemwide color schemes, e.g. "Solarized" and click "OK"
3. "Remove" the edited color scheme

Actual Results:  
The Solarized scheme vanishes and you can't re-select the original one from /usr/share/konsole without restarting konsole.

Expected Results:  
The original version of the color scheme is visible again and can be chosen. That scheme exists on disk and should be selectable.


I realize that having the original scheme reappear after you "Remove" it is a bit counter-intuitive, but otherwise there is no way to restore the original version of the scheme. Maybe a "restore to defaults" setting in the Edit dialog would be better, which would delete the customized file under ~/.local/share/konsole and cause the systemwide one to be shown in the list again.
Comment 1 Kurt Hindenburg 2018-01-23 14:37:50 UTC
Git commit 0d95c7f46bd512cc7660af1b85f09b8c23d3c3e3 by Kurt Hindenburg.
Committed on 23/01/2018 at 14:34.
Pushed by hindenburg into branch 'master'.

Add a way to reset changes to system-wide color schemes

If an user has alter the system-side color schemes, Konsole saves
thoses changes in the user's local folder.  This patch allows that
local user file to be deleted, thus resetting the color scheme to the
default system-wide file.

Patch by ahmadsamir
FIXED-IN: 18.04
Differential Revision: https://phabricator.kde.org/D9568

M  +22   -0    src/ColorSchemeManager.cpp
M  +12   -0    src/ColorSchemeManager.h
M  +27   -1    src/EditProfileDialog.cpp
M  +8    -0    src/EditProfileDialog.h
M  +11   -1    src/EditProfileDialog.ui

https://commits.kde.org/konsole/0d95c7f46bd512cc7660af1b85f09b8c23d3c3e3