Add a way to reset changes to system-wide color schemes

If an user has alter the system-side color schemes, Konsole saves
thoses changes in the user's local folder.  This patch allows that
local user file to be deleted, thus resetting the color scheme to the
default system-wide file.

Patch by ahmadsamir

BUG: 369481
FIXED-IN: 18.04
Differential Revision: https://phabricator.kde.org/D9568